@@ -8595,7 +8595,7 @@
 
 2002-07-21  Nevin Kapur  <nevin@jhu.edu>
 
-	* nnmail.el (nnmail-fancy-expiry-target): Treat nonexisting
+	* nnmail.el (nnmail-fancy-expiry-target): Treat nonexistent
 	headers as empty headers.
 
 2002-07-21  Jochen Hein  <jochen@jochen.org>
